[ClearMine] 将Window的Style应用在所有主要弹出框上。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@203 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/GameWonWindow.xaml
+++ b/ClearMine.Dialogs/GameWonWindow.xaml
@@ -7,7 +7,8 @@
               Message="{Binding Message, Mode=OneWay}"
               Content="{Binding Details, Mode=OneWay}"
               ExpanderMessage="{DynamicResource MoreDetailsMessage}"
-              Title="{DynamicResource GameWonDialogTitle}">
+              Title="{DynamicResource GameWonDialogTitle}"
+              Style="{DynamicResource MainWindowStyle}">
     <OptionDialog.Options>
         <x:Array Type="{x:Type Button}">
             <Button Margin="0,0,7,0"
