--- a/ClearMine.Dialogs/AboutDialog.xaml
+++ b/ClearMine.Dialogs/AboutDialog.xaml
@@ -1,13 +1,20 @@
 ﻿<Window x:Class="ClearMine.Dialogs.AboutDialog" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:f="clr-namespace:ClearMine.Framework;assembly=ClearMine.Framework"
+        xmlns:c="clr-namespace:ClearMine.Framework.Controls;assembly=ClearMine.Framework"
+        c:WindowExt.ResizeMode="NoResize"
         Background="{StaticResource DialogBackground}"
         TextOptions.TextFormattingMode="Display"
         WindowStartupLocation="CenterOwner"
         SizeToContent="WidthAndHeight"
         Title="{DynamicResource AboutDialogTitle}"
         ShowInTaskbar="False"
-        ResizeMode="NoResize">
+        ResizeMode="NoResize"
+        Style="{DynamicResource MainWindowStyle}">
+    <Window.CommandBindings>
+        <x:Static Member="f:UICommandBindings.CloseBinding" />
+    </Window.CommandBindings>
     <DockPanel Margin="12">
         <DockPanel DockPanel.Dock="Bottom"
                    LastChildFill="False">
