--- a/ClearMine.Dialogs/ConfirmNewGameWindow.xaml
+++ b/ClearMine.Dialogs/ConfirmNewGameWindow.xaml
@@ -1,9 +1,12 @@
 ﻿<OptionDialog x:Class="ClearMine.Dialogs.ConfirmNewGameWindow" x:ClassModifier="internal"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+              xmlns:c="clr-namespace:ClearMine.Framework.Controls;assembly=ClearMine.Framework"
+              c:WindowExt.ResizeMode="NoResize"
               WindowStartupLocation="CenterOwner"
               Message="{DynamicResource ConfirmNewGameMessage}"
-              Title="{DynamicResource ConfirmNewGameDialogTitle}">
+              Title="{DynamicResource ConfirmNewGameDialogTitle}"
+              Style="{DynamicResource MainWindowStyle}">
     <OptionDialog.Options>
         <x:Array Type="{x:Type Button}">
             <Button IsDefault="True"
