--- a/ClearMine.Dialogs/OptionsDialog.xaml
+++ b/ClearMine.Dialogs/OptionsDialog.xaml
@@ -1,9 +1,12 @@
 ﻿<Window x:Class="ClearMine.Dialogs.OptionsDialog" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:f="clr-namespace:ClearMine.Framework;assembly=ClearMine.Framework"
         xmlns:c="clr-namespace:ClearMine.Framework.Converters;assembly=ClearMine.Framework"
         xmlns:h="clr-namespace:ClearMine.Framework.Controls;assembly=ClearMine.Framework"
         xmlns:m="clr-namespace:ClearMine.GameDefinition;assembly=ClearMine.GameDefinition"
+        xmlns:t="clr-namespace:ClearMine.Framework.Controls;assembly=ClearMine.Framework"
+        t:WindowExt.ResizeMode="NoResize"
         h:CommandsHelper.LoadBindingsFromVM="True"
         Background="{StaticResource DialogBackground}"
         TextOptions.TextFormattingMode="Display"
@@ -11,10 +14,14 @@
         SizeToContent="WidthAndHeight"
         ShowInTaskbar="False"
         ResizeMode="NoResize"
+        Style="{DynamicResource MainWindowStyle}"
         Title="{DynamicResource OptionsDialogTitle}">
     <Window.Resources>
         <c:DifficultyToBooleanConverter x:Key="DifficultyToBooleanConverter" />
     </Window.Resources>
+    <Window.CommandBindings>
+        <x:Static Member="f:UICommandBindings.CloseBinding" />
+    </Window.CommandBindings>
     <!-- Pay attention to the focus sequence when update xaml. -->
     <StackPanel Margin="12">
         <GroupBox Header="{DynamicResource DifficultySettingsGroupLabel}"
