--- a/ClearMine.Dialogs/PluginsDialog.xaml
+++ b/ClearMine.Dialogs/PluginsDialog.xaml
@@ -1,10 +1,12 @@
 ﻿<Window x:Class="ClearMine.Dialogs.PluginsDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:f="clr-namespace:ClearMine.Framework;assembly=ClearMine.Framework"
         ShowInTaskbar="False"
         WindowStartupLocation="CenterOwner"
         TextOptions.TextFormattingMode="Display"
         Background="{DynamicResource DialogBackground}"
+        Style="{DynamicResource MainWindowStyle}"
         Title="{DynamicResource PluginDialogTitle}" Height="300" Width="500">
     <Window.Resources>
         <Style x:Key="ItemContainerStyle"
@@ -13,6 +15,11 @@
             <Setter Property="ToolTip" Value="{Binding Description}" />
         </Style>
     </Window.Resources>
+    <Window.CommandBindings>
+        <x:Static Member="f:UICommandBindings.CloseBinding" />
+        <x:Static Member="f:UICommandBindings.MaximizeBinding" />
+        <x:Static Member="f:UICommandBindings.MinimizeBinding" />
+    </Window.CommandBindings>
     <DockPanel Margin="12"
                DataContext="{Binding Plugins}">
         <ListView Margin="0,0,7,0" ItemsSource="{Binding}"
