--- a/ClearMine.Dialogs/StatisticsWindow.xaml
+++ b/ClearMine.Dialogs/StatisticsWindow.xaml
@@ -4,6 +4,8 @@
         xmlns:c="clr-namespace:ClearMine.GameDefinition;assembly=ClearMine.GameDefinition"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:t="clr-namespace:ClearMine.Framework.Controls;assembly=ClearMine.Framework"
+        t:WindowExt.ResizeMode="NoResize"
         h:CommandsHelper.LoadBindingsFromVM="True"
         Background="{StaticResource DialogBackground}"
         TextOptions.TextFormattingMode="Display"
@@ -11,6 +13,7 @@
         SizeToContent="WidthAndHeight"
         ShowInTaskbar="False"
         ResizeMode="NoResize"
+        Style="{DynamicResource MainWindowStyle}"
         Title="{DynamicResource StatisticsDialogTitle}">
     <DockPanel Margin="12">
         <DockPanel DockPanel.Dock="Top" Margin="0,0,0,12">
