--- a/ClearMine.Themes/Themes/linux.ubuntu.xaml
+++ b/ClearMine.Themes/Themes/linux.ubuntu.xaml
@@ -3,11 +3,11 @@
                     xmlns:vm="clr-namespace:ClearMine.VM;assembly=ClearMine.VM"
                     xmlns:m="clr-namespace:ClearMine.VM.Commands;assembly=ClearMine.VM"
                     xmlns:s="clr-namespace:ClearMine.Common.Messaging;assembly=ClearMine.Common"
+                    xmlns:u="clr-namespace:ClearMine.Common.Utilities;assembly=ClearMine.Common"
                     xmlns:d="clr-namespace:ClearMine.Framework;assembly=ClearMine.Framework"
                     xmlns:c="clr-namespace:ClearMine.Framework.Controls;assembly=ClearMine.Framework"
                     xmlns:b="clr-namespace:ClearMine.Framework.Behaviors;assembly=ClearMine.Framework"
-                    xmlns:logic="clr-namespace:ClearMine.GameDefinition;assembly=ClearMine.GameDefinition"
-                    xmlns:u="clr-namespace:ClearMine.GameDefinition.Utilities;assembly=ClearMine.GameDefinition">
+                    xmlns:logic="clr-namespace:ClearMine.GameDefinition;assembly=ClearMine.GameDefinition">
     <Rect x:Key="NumberViewbox">-0.2,-0.2 1.5,1.5</Rect>
     <Rect x:Key="MarkViewbox">-0.1,-0.1 1.2,1.2</Rect>
     <Rect x:Key="FaceViewbox">-0.1,-0.1 1.2,1.2</Rect>
@@ -657,7 +657,7 @@
             </Grid.ColumnDefinitions>
             <Menu Grid.ColumnSpan="3"
                   ItemContainerStyle="{DynamicResource GeneratedMenuStyle}"
-                  ItemsSource="{Binding Source={x:Static u:Game.MenuDefinition}}" />
+                  ItemsSource="{Binding Source={x:Static u:Infrastructure.MenuDefinition}}" />
             <Button Command="New"
                     Margin="18,0,18,4"
                     Grid.Row="2"
