[ClearMine] OptionDialog不能正确在Ubuntu风格下显示。回滚。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@206 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/ConfirmNewGameWindow.xaml
+++ b/ClearMine.Dialogs/ConfirmNewGameWindow.xaml
@@ -5,8 +5,7 @@
               c:WindowExt.ResizeMode="NoResize"
               WindowStartupLocation="CenterOwner"
               Message="{DynamicResource ConfirmNewGameMessage}"
-              Title="{DynamicResource ConfirmNewGameDialogTitle}"
-              Style="{DynamicResource MainWindowStyle}">
+              Title="{DynamicResource ConfirmNewGameDialogTitle}">
     <OptionDialog.Options>
         <x:Array Type="{x:Type Button}">
             <Button IsDefault="True"
